refactor: swagger documentation of get event by date range fixed and get range by date function fixed
