# docs/swagger.json
@@ -8,12 +8,34 @@
         "version": "{{.Version}}"
     },
     "paths": {
+		"/events":{
+			"get":{
+				"summary": "Get info of all events",
+				"tags": ["Events"],
+				"responses": {
+					"200":{
+						"description": "OK",
+					"schema": {
+						"type":"object",
+						"example":
+						  {
+							"user_id": "6443a1e99c150ed9e52c5bdd",
+							"name": "Anand",
+							"phone": 7506639417,
+							"gov_id": "ABCDEFG",
+							"e_mail": "anand@ini8labs.tech"
+						  }
+					}
+				}
+			}
+		}
+		},
 		"/event/Add":{
 			"post":{
+				"summary":"Add a new event",
 				"tags":["Events"],
 				"parameters":[
 					{
-						"summary":"Add a new event",
 						"name":"info",
 						"in":"body",
 						"schema":{
@@ -155,17 +177,30 @@
 					"type": "string",
 					"required": false
 					},
-				  {
-					"description": "Get user info by date range",
-					"name": "start_date|end_date",
-					"in": "query",
-					"type": "string",
-					"style": "pipeDelimited",
-					"explode": false,
-					"allowReserved": true,
-					"required": false
+		
+						{
+							"name": "startDate",
+							"in": "query",
+							"description": "Start date (yyyy-mm-dd)",
+							"required": true,
+							"schema": {
+							  "type": "string",
+							  "format": "date",
+							  "example": "2023-05-01"
 							}
-				],
+						  },
+						  {
+							"name": "endDate",
+							"in": "query",
+							"description": "End date (yyyy-mm-dd)",
+							"required": true,
+							"schema": {
+							  "type": "string",
+							  "format": "date",
+							  "example": "2023-05-03"
+							}
+						  }
+					],
 				"responses": {
 				  "200": {
 					"description": "OK",
